# advent_of_code_2023

./: .gitignore  pyproject.toml
python/day_1/: day_1.ipynb
python/day_2/: day_2.ipynb
python/day_3/: day_3.ipynb
python/day_4/: day_4.ipynb
python/day_5/: day_5.ipynb
python/day_6/: day_6.ipynb
python/day_7/: day_7.ipynb
python/day_8/: day_8.ipynb
python/day_9/: day_9.ipynb
