[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Luis Ventura <30115537+Lawiss@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
scipy = "^1.11.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
